Fix root element height on Safari.root element height on Safari.root element height on Safari.

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,5 @@ body {
   height: -webkit-fill-available;
 }
 #root {
-  height: 100%;
+  height: 100vh;
 }
